--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -148,7 +148,7 @@ cplay_5 : "القنوات فقط مدعومة."
 cplay_6 : "» يجب أن تكون <b>المالك</b> للقناة {0} لتربطها بالمجموعة هذه.\n<b>مالك القناة :</b> @{1}\n\nبديلاً يمكنك ربط مجموعتك بتلك القناة ومن ثم محاولة الاتصال باستخدام <code>/channelplay linked</code>"
 cplay_7 : "» تم تعطيل تشغيل القناة."
 
-play_1 : "🔎"
+play_1 : "يتم تشغيل ي روحي🔎"
 play_2 : "<b>➻ وضع تشغيل القناة</b>\n\nجاري المعالجة، يرجى الانتظار...\n\n<b>القناة المرتبطة :</b> {0}"
 play_3 : "» فشل في معالجة الاستعلام."
 play_4 : "<b>تشغيل للمسؤولين فقط</b>\nيُسمح فقط لمسؤولي هذه الدردشة بالتشغيل\n\nقم بتغيير وضع التشغيل عبر /playmode"
@@ -201,120 +201,119 @@ S_B_5 : ". مـطـور البوت ."
 S_B_6 : ". مطور السورس ."
 S_B_7 : " "
 
-H_B_1 : "Aᴅᴍɪɴ"
-H_B_2 : "Aᴜᴛʜ"
-H_B_3 : "Bʀᴏᴀᴅᴄᴀsᴛ"
-H_B_4 : "Bʟ-Cʜᴀᴛ"
-H_B_5 : "Bʟ-Usᴇʀ"
-H_B_6 : "C-Pʟᴀʏ"
-H_B_7 : "G-Bᴀɴ"
-H_B_8 : "Lᴏᴏᴘ"
-H_B_9 : "Mᴀɪɴᴛᴇɴᴀɴᴄᴇ"
-H_B_10 : "Pɪɴɢ"
-H_B_11 : "Pʟᴀʏ"
-H_B_12 : "Sʜᴜғғʟᴇ"
-H_B_13 : "Sᴇᴇᴋ"
-H_B_14 : "Sᴏɴɢ"
-H_B_15 : "Sᴘᴇᴇᴅ"
+H_B_1 : "أدمن"
+H_B_2 : "أوث"
+H_B_3 : "بث"
+H_B_4 : "بل-دردشة"
+H_B_5 : "بل-مستخدم"
+H_B_6 : "تشغيل-عشوائي"
+H_B_7 : "حظر-جماعي"
+H_B_8 : "تكرار"
+H_B_9 : "صيانة"
+H_B_10 : "بنج"
+H_B_11 : "تشغيل"
+H_B_12 : "تبديل-عشوائي"
+H_B_13 : "بحث"
+H_B_14 : "أغنية"
+H_B_15 : "سرعة"
 
-P_B_1 : "ᴀᴜᴅɪᴏ"
-P_B_2 : "ᴠɪᴅᴇᴏ"
-P_B_3 : "ʟɪᴠᴇ sᴛʀᴇᴀᴍ"
-P_B_4 : "ɴᴏʀᴍᴀʟ"
+P_B_1 : "صوتي"
+P_B_2 : "فيديو"
+P_B_3 : "بث مباشر"
+P_B_4 : "عادي"
 
-ST_B_1 : "Aᴜᴛʜ ᴜsᴇʀs"
-ST_B_2 : "Pʟᴀʏ ᴍᴏᴅᴇ"
-ST_B_3 : "Lᴀɴɢᴜᴀɢᴇ"
-ST_B_4 : "Vᴏᴛɪɴɢ ᴍᴏᴅᴇ"
-ST_B_5 : "ᴏɴ"
-ST_B_6 : "ᴏғғ"
-ST_B_7 : "Aᴜᴛʜ ᴜsᴇʀs ➜"
-ST_B_8 : "ᴀᴅᴍɪɴs"
-ST_B_9 : "ᴇᴠᴇʀʏᴏɴᴇ"
-ST_B_10 : "Sᴇᴀʀᴄʜ ᴍᴏᴅᴇ ➜"
-ST_B_11 : "ᴅɪʀᴇᴄᴛ"
-ST_B_12 : "ɪɴʟɪɴᴇ"
-ST_B_13 : "Aᴅᴍɪɴ ᴄᴍᴅs ➜"
-ST_B_14 : "Pʟᴀʏ ᴛʏᴘᴇ ➜"
+ST_B_1 : "مستخدمين مصرح لهم"
+ST_B_2 : "وضع التشغيل"
+ST_B_3 : "اللغة"
+ST_B_4 : "وضع التصويت"
+ST_B_5 : "مشغل"
+ST_B_6 : "معطل"
+ST_B_7 : "مستخدمين مصرح لهم ➜"
+ST_B_8 : "مسؤولون"
+ST_B_9 : "الجميع"
+ST_B_10 : "وضع البحث ➜"
+ST_B_11 : "مباشر"
+ST_B_12 : "داخلي"
+ST_B_13 : "أوامر المسؤول ➜"
+ST_B_14 : "نوع التشغيل ➜"
 
-SA_B_1 : "ᴏᴠᴇʀᴀʟʟ sᴛᴀᴛs"
-SA_B_2 : "ɢᴇɴᴇʀᴀʟ"
-SA_B_3 : "ᴏᴠᴇʀᴀʟʟ"
+SA_B_1 : "إحصائيات عامة"
+SA_B_2 : "عام"
+SA_B_3 : "عامة"
 
-QU_B_1 : "ǫᴜᴇᴜᴇ"
+QU_B_1 : "قائمة الانتظار"
 QU_B_2 : " {0} —————————— {1}"
 
-sudo_1 : "» {0} ɪs ᴀʟʀᴇᴀᴅʏ ɪɴ sᴜᴅᴏ ᴜsᴇʀs ʟɪsᴛ."
-sudo_2 : "» ᴀᴅᴅᴇᴅ {0} ᴛᴏ sᴜᴅᴏ ᴜsᴇʀs ʟɪsᴛ." 
-sudo_3 : "» {0} ɪs ɴᴏᴛ ɪɴ sᴜᴅᴏ ᴜsᴇʀs ʟɪsᴛ."
-sudo_4 : "» ʀᴇᴍᴏᴠᴇᴅ {0} ғʀᴏᴍ sᴜᴅᴏ ᴜsᴇʀs ʟɪsᴛ."
-sudo_5 : "<u><b> ᴏᴡɴᴇʀ :</b></u>\n"
-sudo_6 : "\n<u><b>✨ sᴜᴅᴏ ᴜsᴇʀs :</b></u>\n"
-sudo_7 : "» ɴᴏ sᴜᴅᴏ ᴜsᴇʀs ғᴏᴜɴᴅ."
-sudo_8 : "ғᴀɪʟᴇᴅ."
+sudo_1 : "» {0} موجود بالفعل في قائمة مستخدمي sudo."
+sudo_2 : "» تمت إضافة {0} إلى قائمة مستخدمي sudo."
+sudo_3 : "» {0} غير موجود في قائمة مستخدمي sudo."
+sudo_4 : "» تمت إزالة {0} من قائمة مستخدمي sudo."
+sudo_5 : "<u><b>🥀 المالك :</b></u>\n"
+sudo_6 : "\n<u><b>✨ مستخدمو sudo :</b></u>\n"
+sudo_7 : "» لا توجد مستخدمين sudo."
+sudo_8 : "فشل."
 
-block_1 : "» {0} ɪs ᴀʟʀᴇᴀᴅʏ ʙʟᴏᴄᴋᴇᴅ ғʀᴏᴍ ᴛʜᴇ ʙᴏᴛ."
-block_2 : "» ᴀᴅᴅᴇᴅ {0} ᴛᴏ ʙʟᴏᴄᴋᴇᴅ ᴜsᴇʀs ʟɪsᴛ."
-block_3 : "» {0} ɪs ɴᴏᴛ ɪɴ ʙʟᴏᴄᴋᴇᴅ ᴜsᴇʀs ʟɪsᴛ."
-block_4 : "» ʀᴇᴍᴏᴠᴇᴅ {0} ғʀᴏᴍ ʙʟᴏᴄᴋᴇᴅ ᴜsᴇʀs ʟɪsᴛ."
-block_5 : "» ɴᴏ ʙʟᴏᴄᴋᴇᴅ ᴜsᴇʀs ғᴏᴜɴᴅ."
-block_6 : "» ɢᴇᴛᴛɪɴɢ ʙʟᴏᴄᴋᴇᴅ ᴜsᴇʀs ʟɪsᴛ..."
-block_7 : "<b> ʙʟᴏᴄᴋᴇᴅ ᴜsᴇʀs :</b>\n\n"
+block_1 : "» {0} محظور بالفعل من البوت."
+block_2 : "» تمت إضافة {0} إلى قائمة المستخدمين المحظورين."
+block_3 : "» {0} غير موجود في قائمة المستخدمين المحظورين."
+block_4 : "» تمت إزالة {0} من قائمة المستخدمين المحظورين."
+block_5 : "» لا توجد مستخدمين محظورين."
+block_6 : "» جاري الحصول على قائمة المستخدمين المحظورين..."
+block_7 : "<b>😫 المستخدمون المحظورون :</b>\n\n"
 
-black_1 : "<b>ᴇxᴀᴍᴘʟᴇ :</b>\n\n/blacklistchat [ᴄʜᴀᴛ ɪᴅ]"
-black_2 : "» ᴛʜɪs ᴄʜᴀᴛ ɪs ᴀʟʀᴇᴀᴅʏ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ."
-black_3 : "» sᴜᴄᴄᴇssғᴜʟʟʏ ᴀᴅᴅᴇᴅ ᴛᴏ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛs."
-black_4 : "<b>ᴇxᴀᴍᴘʟᴇ :</b>\n\n/whitelistchat [ᴄʜᴀᴛ ɪᴅ]"
-black_5 : "» ᴛʜɪs ᴄʜᴀᴛ ɪs ɴᴏᴛ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ."
-black_6 : "» sᴜᴄᴄᴇssғᴜʟʟʏ ʀᴇᴍᴏᴠᴇᴅ ғʀᴏᴍ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛs."
-black_7 : "» ʟɪsᴛ ᴏғ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛs :\n\n"
-black_8 : "» ɴᴏ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛs ᴏɴ {0}."
-black_9 : "» sᴏᴍᴇᴛʜɪɴɢ ᴡᴇɴᴛ ᴡʀᴏɴɢ."
+black_1 : "<b>مثال :</b>\n\n/blacklistchat [معرّف الدردشة]"
+black_2 : "» هذه الدردشة محظورة بالفعل."
+black_3 : "» تمت إضافتها بنجاح إلى قائمة الدردشات المحظورة."
+black_4 : "<b>مثال :</b>\n\n/whitelistchat [معرّف الدردشة]"
+black_5 : "» هذه الدردشة غير محظورة."
+black_6 : "» تمت إزالتها بنجاح من قائمة الدردشات المحظورة."
+black_7 : "» قائمة الدردشات المحظورة :\n\n"
+black_8 : "» لا توجد دردشات محظورة على {0}."
+black_9 : "» حدث خطأ ما."
 
-maint_1 : "<b>ᴇxᴀᴍᴘʟᴇ :</b>\n/maintenance [ᴇɴᴀʙʟᴇ | ᴅɪsᴀʙʟᴇ]"
-maint_2 : "» {0} ᴍᴀɪɴᴛᴇɴᴀɴᴄᴇ ᴍᴏᴅᴇ ᴇɴᴀʙʟᴇᴅ."
-maint_3 : "» {0} ᴍᴀɪɴᴛᴇɴᴀɴᴄᴇ ᴍᴏᴅᴇ ᴅɪsᴀʙʟᴇᴅ."
-maint_4 : "» ᴍᴀɪɴᴛᴇɴᴀɴᴄᴇ ᴍᴏᴅᴇ ɪs ᴀʟʀᴇᴀᴅʏ ᴇɴᴀʙʟᴇᴅ."
-maint_5 : "» ᴍᴀɪɴᴛᴇɴᴀɴᴄᴇ ᴍᴏᴅᴇ ɪs ᴀʟʀᴇᴀᴅʏ ᴅɪsᴀʙʟᴇᴅ."
+maint_1 : "<b>مثال :</b>\n/maintenance [تمكين | تعطيل]"
+maint_2 : "» تم تمكين وضع الصيانة {0}."
+maint_3 : "» تم تعطيل وضع الصيانة {0}."
+maint_4 : "» وضع الصيانة مُمكّن بالفعل."
+maint_5 : "» وضع الصيانة مُعطّل بالفعل."
 
-log_1 : "<b>ᴇxᴀᴍᴘʟᴇ :</b>\n/logger [ᴇɴᴀʙʟᴇ | ᴅɪsᴀʙʟᴇ]"
-log_2 : "ᴇɴᴀʙʟᴇᴅ ʟᴏɢɢɪɴɢ."
-log_3 : "ᴅɪsᴀʙʟᴇᴅ ʟᴏɢɢɪɴɢ."
+log_1 : "<b>مثال :</b>\n/logger [تمكين | تعطيل]"
+log_2 : "تم تمكين تسجيل البيانات."
+log_3 : "تم تعطيل تسجيل البيانات."
 
-broad_1 : "» sᴛᴀʀᴛᴇᴅ ʙʀᴏᴀᴅᴄᴀsᴛɪɴɢ..."
-broad_2 : "<b>ᴇxᴀᴍᴘʟᴇ :</b>\n\n/broadcast [ᴍᴇssᴀɢᴇ ᴏʀ ʀᴇᴘʟʏ ᴛᴏ ᴀ ᴍᴇssᴀɢᴇ]"
-broad_3 : "» ʙʀᴏᴀᴅᴄᴀsᴛᴇᴅ ᴍᴇssᴀɢᴇ ᴛᴏ {0} ᴄʜᴀᴛs ᴡɪᴛʜ {1} ᴘɪɴs ғʀᴏᴍ ᴛʜᴇ ʙᴏᴛ."
-broad_4 : "» ʙʀᴏᴀᴅᴄᴀsᴛᴇᴅ ᴍᴇssᴀɢᴇ ᴛᴏ {0} ᴜsᴇʀs."
-broad_5 : "» sᴛᴀʀᴛɪɴɢ ᴀssɪsᴛᴀɴᴛ ʙʀᴏᴀᴅᴄᴀsᴛ..."
-broad_6 : "➻ ᴀssɪsᴛᴀɴᴛ ʙʀᴏᴀᴅᴄᴀsᴛ :\n\n"
-broad_7 : "↬ ᴀssɪsᴛᴀɴᴛ {0} ʙʀᴏᴀᴅᴄᴀsᴛᴇᴅ ɪɴ {1} ᴄʜᴀᴛs."
-broad_8 : "» ᴘʟᴇᴀsᴇ ᴘʀᴏᴠɪᴅᴇ sᴏᴍᴇ ᴛᴇxᴛ ᴛᴏ ʙʀᴏᴀᴅᴄᴀsᴛ."
+broad_1 : "» بدء البث..."
+broad_2 : "<b>مثال :</b>\n\n/broadcast [الرسالة أو الرد على رسالة]"
+broad_3 : "» تم بث الرسالة إلى {0} دردشة مع {1} تثبيتًا من البوت."
+broad_4 : "» تم بث الرسالة إلى {0} مستخدمين."
+broad_5 : "» بدء بث المساعد..."
+broad_6 : "➻ بث المساعد :\n\n"
+broad_7 : "↬ تم بث المساعد {0} في {1} دردشة."
+broad_8 : "» يُرجى تقديم نص للبث."
 
-server_1 : "» ғᴀɪʟᴇᴅ ᴛᴏ ɢᴇᴛ ʟᴏɢs."
-server_2 : "ᴘʟᴇᴀsᴇ ᴍᴀᴋᴇ sᴜʀᴇ ᴛʜᴀᴛ ʏᴏᴜʀ ʜᴇʀᴏᴋᴜ ᴀᴘɪ ᴋᴇʏ ᴀɴᴅ ᴀᴘᴘ ɴᴀᴍᴇ ᴀʀᴇ ᴄᴏɴғɪɢᴜʀᴇᴅ ᴄᴏʀʀᴇᴄᴛʟʏ."
-server_3 : "ᴄʜᴇᴄᴋɪɴɢ ꜰᴏʀ ᴀᴠᴀɪʟᴀʙʟᴇ ᴜᴘᴅᴀᴛᴇs..."
-server_4 : "ɢɪᴛ ᴄᴏᴍᴍᴀɴᴅ ᴇʀʀᴏʀ."
-server_5 : "ɪɴᴠᴀʟɪᴅ ɢɪᴛ ʀᴇᴘsɪᴛᴏʀʏ."
-server_6 : "» ʙᴏᴛ ɪs ᴜᴘ-ᴛᴏ-ᴅᴀᴛᴇ."
-server_7 : "» ʙᴏᴛ ᴜᴩᴅᴀᴛᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ ! ɴᴏᴡ ᴡᴀɪᴛ ғᴏʀ ғᴇᴡ ᴍɪɴᴜᴛᴇs ᴜɴᴛɪʟ ᴛʜᴇ ʙᴏᴛ ʀᴇsᴛᴀʀᴛs ᴀɴᴅ ᴩᴜsʜ ᴄʜᴀɴɢᴇs !"
-server_8 : "{0} ɪs ʀᴇsᴛᴀʀᴛɪɴɢ...\n\nʏᴏᴜ ᴄᴀɴ sᴛᴀʀᴛ ᴩʟᴀʏɪɴɢ ᴀɢᴀɪɴ ᴀғᴛᴇʀ 15-20 sᴇᴄᴏɴᴅs."
-server_9 : "sᴏᴍᴇᴛʜɪɴɢ ᴡᴇɴᴛ ᴡʀᴏɴɢ, ᴩʟᴇᴀsᴇ ᴄʜᴇᴄᴋ ʟᴏɢs."
-server_10 : "ᴀɴ ᴇxᴄᴇᴩᴛɪᴏɴ ᴏᴄᴄᴜʀᴇᴅ ᴀᴛ #ᴜᴩᴅᴀᴛᴇʀ ᴅᴜᴇ ᴛᴏ : <code>{0}</code>"
-server_11 : "» ʀᴜɴɴɪɴɢ ᴀ sᴘᴇᴇᴅᴛᴇsᴛ..."
-server_12 : "<b>⇆ ʀᴜɴɴɪɴɢ ᴅᴏᴡɴʟᴏᴀᴅ sᴩᴇᴇᴅᴛᴇsᴛ...</b>"
-server_13 : "<b>⇆ ʀᴜɴɴɪɴɢ ᴜᴩʟᴏᴀᴅ sᴩᴇᴇᴅᴛᴇsᴛ...</b>"
-server_14 : "<b>↻ sʜᴀʀɪɴɢ sᴩᴇᴇᴅᴛᴇsᴛ ʀᴇsᴜʟᴛs...</b>"
-server_15 : "✯ <b>sᴩᴇᴇᴅᴛᴇsᴛ ʀᴇsᴜʟᴛs</b> ✯\n\n<u><b>ᴄʟɪᴇɴᴛ :</b></u>\n<b>» ɪsᴩ :</b> {0}\n<b>» ᴄᴏᴜɴᴛʀʏ :</b> {1}\n\n<u><b>sᴇʀᴠᴇʀ :</b></u>\n<b>» ɴᴀᴍᴇ :</b> {2}\n<b>» ᴄᴏᴜɴᴛʀʏ :</b> {3}, {4}\n<b>» sᴩᴏɴsᴏʀ :</b> {5}\n<b>» ʟᴀᴛᴇɴᴄʏ :</b> {6}\n<b>» ᴩɪɴɢ :</b> {7}"
-
-gban_1 : "» ᴡʜʏ ᴅɪᴅ ʏᴏᴜ ᴡᴀɴɴᴀ ɢʙᴀɴ ʏᴏᴜʀsᴇʟғ ʙᴀʙʏ ?"
-gban_2 : "» ᴡʜʏ sʜᴏᴜʟᴅ ɪ ɢʙᴀɴ ᴍʏsᴇʟғ ?"
-gban_3 : "» ʏᴏᴜ ᴄᴀɴ'ᴛ ɢʙᴀɴ ᴍʏ sᴜᴅᴏᴇʀs."
-gban_4 : "» {0} ɪs ᴀʟʀᴇᴀᴅʏ ɢʟᴏʙᴀʟʟʏ ʙᴀɴɴᴇᴅ ғʀᴏᴍ ᴛʜᴇ ʙᴏᴛ."
-gban_5 : "» ɪɴɪᴛɪᴀʟɪᴢɪɴɢ ɢʟᴏʙᴀʟ ʙᴀɴ ᴏɴ {0}.\n\n<b>ᴛɪᴍᴇ ᴇxᴘᴇᴄᴛᴇᴅ :</b> {1}"
-gban_6 : "<b><u>ɴᴇᴡ ɢʟᴏʙᴀʟ ʙᴀɴ ᴏɴ {0} :</u></b>\n\n<b>ᴏʀɪɢɪɴᴀᴛᴇᴅ ғʀᴏᴍ :</b> {1} [<code>{2}</code>]\n<b>ᴜsᴇʀ :</b> {3}\n<b>ᴜsᴇʀ ɪᴅ :</b> {4}\n\n<b>ʙᴀɴɴᴇᴅ ʙʏ :</b> {5}\n<b>ᴄʜᴀᴛs :</b> </code>{6}</code>"
-gban_7 : "» {0} ɪs ɴᴏᴛ ɢʙᴀɴɴᴇᴅ ғʀᴏᴍ ᴛʜᴇ ʙᴏᴛ."
-gban_8 : "» ʟɪғᴛɪɴɢ ɢʟᴏʙᴀʟ ʙᴀɴ ғʀᴏᴍ {0}.\n\n<b>ᴇxᴘᴇᴄᴛᴇᴅ ᴛɪᴍᴇ :</b> {1}"
-gban_9 : "» ʟɪғᴛᴇᴅ ɢʟᴏʙᴀʟ ʙᴀɴ ғʀᴏᴍ {0}.\n\nᴜɴʙᴀɴɴᴇᴅ ɪɴ {1} ᴄʜᴀᴛs."
-gban_10 : "» ɴᴏ ᴏɴᴇ ɪs ɢʟᴏʙᴀʟʟʏ ʙᴀɴɴᴇᴅ ғʀᴏᴍ ᴛʜᴇ ʙᴏᴛ."
-gban_11 : "» ғᴇᴛᴄʜɪɴɢ ɢʙᴀɴɴᴇᴅ ᴜsᴇʀs ʟɪsᴛ..."
-gban_12 : " <b>ɢʟᴏʙᴀʟʟʏ ʙᴀɴɴᴇᴅ ᴜsᴇʀs :</b>\n\n"
+server_1 : "» فشل في الحصول على السجلات."
+server_2 : "يرجى التأكد من تكوين مفتاح API هيروكو الخاص بك واسم التطبيق بشكل صحيح."
+server_3 : "التحقق من وجود تحديثات متاحة..."
+server_4 : "خطأ في أمر git."
+server_5 : "مستودع Git غير صالح."
+server_6 : "» البوت محدث."
+server_7 : "» تم تحديث البوت بنجاح! انتظر بضع دقائق حتى يتم إعادة تشغيل البوت ودمج التغييرات!"
+server_8 : "جاري إعادة تشغيل {0}...\n\nيمكنك البدء في التشغيل مرة أخرى بعد 15-20 ثانية."
+server_9 : "حدث خطأ ما، يُرجى التحقق من السجلات."
+server_10 : "حدث استثناء في #مُحدّث بسبب : <code>{0}</code>"
+server_11 : "» جاري إجراء اختبار سرعة..."
+server_12 : "<b>⇆ جاري اختبار سرعة التنزيل...</b>"
+server_13 : "<b>⇆ جاري اختبار سرعة الرفع...</b>"
+server_14 : "<b>↻ مشاركة نتائج اختبار السرعة...</b>"
+server_15 : "✯ <b>نتائج اختبار السرعة</b> ✯\n\n<u><b>العميل :</b></u>\n<b>» عنوان IP :</b> {0}\n<b>» البلد :</b> {1}\n\n<u><b>الخادم :</b></u>\n<b>» الاسم :</b> {2}\n<b>» البلد :</b> {3}, {4}\n<b>» الراعي :</b> {5}\n<b>» التأخير :</b> {6}\n<b>» التأخير في الشبكة :</b> {7}"
+gban_1 : "» لماذا تريد حظر نفسك يا صغيري؟"
+gban_2 : "» لماذا يجب أن أحظر نفسي؟"
+gban_3 : "» لا يمكنك حظر المستخدمين المصرح لهم."
+gban_4 : "» تم حظر {0} بالفعل على مستوى البوت."
+gban_5 : "» جاري تنفيذ حظر عالمي على {0}.\n\n<b>الزمن المتوقع:</b> {1}"
+gban_6 : "<b><u>حظر عالمي جديد على {0}:</u></b>\n\n<b>منبعه من :</b> {1} [<code>{2}</code>]\n<b>المستخدم :</b> {3}\n<b>معرّف المستخدم :</b> {4}\n\n<b>تم الحظر بواسطة :</b> {5}\n<b>الدردشات :</b> </code>{6}</code>"
+gban_7 : "» {0} ليس محظورًا على مستوى البوت."
+gban_8 : "» رفع الحظر العالمي عن {0}.\n\n<b>الزمن المتوقع :</b> {1}"
+gban_9 : "» تم رفع الحظر العالمي عن {0}.\n\nتم إلغاء الحظر في {1} دردشة."
+gban_10 : "» لا يوجد أي مستخدم محظور على مستوى البوت."
+gban_11 : "» جاري جلب قائمة المستخدمين المحظورين على مستوى البوت..."
+gban_12 : "🙂 <b>قائمة المستخدمين المحظورين عالميًا :</b>\n\n"
